<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cms50dplus_ros2_driver</name>
  <version>0.0.0</version>
  <description>Python based ROS2 Humble driver for CMS-50D-PLUS (Pulox PO-250) device</description>
  <maintainer email="andreas.zachariae@h-ka.de">Andreas Zachariae</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>